Bug 1773795 - Spoof window/windowtext colors in content. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D149143